--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker
           .register("/service-worker.js")
-          .then(() => console.log("Service Worker registered successfully."))
+          .then((reg) => console.log("Service Worker registered successfully.", reg))
           .catch(error =>
             console.log("Service Worker registration failed:", error)
           );
